<resources>
    <string name="app_name">DiningSolutions</string>
    <string name="name_hint">Enter Customer Name</string>

    <string name="customer_created_label">Date here</string>
    <string name="customer_current_label">Current customer?</string>
    <string name="customer_picker_title">Customer</string>

    <string name="date_picker_title">Date</string>
    <string name="time_picker_title">Time</string>

    <string name="house_name_number_hint">Enter House Name / Number</string>
    <string name="street_hint">Enter Street</string>
    <string name="town_hint">Enter Town</string>
    <string name="county_hint">Enter County</string>
    <string name="postcode_hint">Enter Postcode</string>
    <string name="new_order">New Order</string>
    <string name="title_todo_list">Todos</string>
    <string name="title_customer_list">Customers</string>
    <string name="title_todo_detail">Todo Detail</string>
    <string name="new_task_title">New Task</string>
    <string name="title_product_list">Products</string>
    <string name="title_product_detail">Product Detail</string>
    <string name="edit_product_title">Edit Product</string>
    <string name="new_customer_title">New Customer</string>
    <string name="title_customer_detail">Customer Detail</string>
    <string name="title_order_list">Orders - </string>
    <string name="edit_customer_title">Edit Customer</string>
    <string name="title_activity_order">Invoice</string>
    <string name="action_settings">Settings</string>
    <string name="action_reports">Reports</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="email_at">\@</string>
    <string name="add_product_title">Select Product</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_title_distributor_name">Distributor Name</string>
    <string name="pref_title_distributor_number">Distributor Number</string>
    <string name="pref_title_distributor_mobile">Distributor Mobile</string>
    <string name="pref_title_distributor_email">Distributor Email</string>
    <string name="pref_title_invoice_start_number">Invoice start number</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="pref_header_distributor">Distributor info</string>
    <string name="title_activity_customer_detail">Customer Details</string>
    <string name="title_activity_reports">Reports</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="pref_title_dsd_email">Dining Solutions invoices email</string>
    <string name="action_customers">Customers</string>
    <string name="action_invoices">Invoices</string>
    <string name="action_products">Products</string>
</resources>
