<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_item_customers"
        android:title="@string/action_customers"
        app:showAsAction="always|withText" />

    <item
        android:id="@+id/menu_item_invoices"
        android:title="@string/action_invoices"
        app:showAsAction="always|withText" />

    <item
        android:id="@+id/menu_item_reports"
        android:title="@string/action_reports"
        app:showAsAction="always|withText" />

    <item
        android:id="@+id/action_products"
        android:orderInCategory="100"
        android:title="@string/action_products"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="110"
        android:title="@string/action_settings"
        app:showAsAction="never" />

</menu>